GNOME Bugzilla – Bug 663994
GtkTextView no longer reports the correct line text to ATs when text wraps
Last modified: 2011-12-13 21:56:48 UTC
Created attachment 201333 [details] test script Steps to reproduce: 1. Launch the attached text script in a terminal 2. Launch gtk3-demo and start the hypertext demo 3. Resize the window so that the demo text wraps onto the 2nd line 4. Arrow between the two lines Expected results: The text reported as the current line would only contain the text on the line to which the caret moved. Actual results: The text reported as the current line is all of the text in the hypertext demo. Note: This is a regression. If you repeat the test using gtk-demo (i.e. Gtk+ v2), things work as expected.
I confirm this issue. If I check for example in Gedit preference the wordwrap related check box, I expecting equals result. If for example my developed application setting the wordwrap property with true value the gtkTextview widget, expecting equals issue. If the wordwrap property is false, this issue not happening my own developed application. Attila
The following fix has been pushed: 4904a2f GtkTextViewAccessible: Respect display lines
Created attachment 201420 [details] [review] GtkTextViewAccessible: Respect display lines This special tweak was lost when porting from GailTextUtil.
*** Bug 661627 has been marked as a duplicate of this bug. ***